<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchBarActivity">

    <!--
    <Button
        android:id="@+id/add_to_plan"
        android:layout_width="108dp"
        android:layout_height="57dp"
        android:onClick="onAddClicked"
        android:text="add to plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    -->

    <Button
        android:id="@+id/view_plan"
        android:layout_width="108dp"
        android:layout_height="57dp"
        android:onClick="onPlanClicked"
        android:text="view plan"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recyclerview"
        android:layout_width="407dp"
        android:layout_height="675dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/search_result" />


</androidx.constraintlayout.widget.ConstraintLayout>