<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanActivity">

    <TextView
        android:id="@+id/total_exhibit"
        android:layout_width="138dp"
        android:layout_height="47dp"

        android:minHeight="48dp"
        android:text="Total exhibit: "
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/total_exhibit_count"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:minHeight="48dp"
        android:textSize="24sp"
        android:text="0"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/Plan"
        android:layout_width="138dp"
        android:layout_height="47dp"

        android:minHeight="48dp"
        android:text="Current Plan"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="134dp"
        android:layout_height="53dp"
        android:onClick="onSearchClicked"
        android:text="@string/searchbar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <Button
        android:id="@+id/route_button"
        android:layout_width="134dp"
        android:layout_height="53dp"
        android:onClick="onRouteClicked"
        android:text="view Route"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <Button
        android:id="@+id/clear_plan_button"
        android:layout_width="134dp"
        android:layout_height="53dp"
        android:onClick="onClearClicked"
        android:text="Clear Plan"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recyclerview"
        android:layout_width="407dp"
        android:layout_height="582dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362"
        tools:listitem="@layout/plan_rv" />


</androidx.constraintlayout.widget.ConstraintLayout>