<resources>
    <string name="app_name">ZooSeeker</string>
    <string name="plan" />
    <string name="back" />
    <string name="searchbar">searchBar</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>